Add middle panel
- middle panel for link to other pages.
- remove unused files.
- update css

--- a/index.htm
+++ b/index.htm
@@ -11,14 +11,22 @@ title: Pixella Perfume
 
             <!-- Header -->
             <div id="header">
-                <div id="loader"><img alt="Loading.." src="img/ajax-loader.gif" /></div>
+                <!-- top right navigator -->
                 <ul class="main_navi">
                         <li class="current"><a class="transition" href="index.htm">Home</a></li>
-                        <!-- <li><a class="transition" href="about.htm">About</a></li>
-                        <li><a class="transition" href="portfolio.htm">Portfolio</a></li>
-                        <li><a class="transition" href="blog.htm">Blog</a></li> 
+                        <li><a class="transition" href="about.htm">Menu</a></li>
+                        <li><a class="transition" href="portfolio.htm">Reviews</a></li>
+                        <!-- <li><a class="transition" href="blog.htm">Blog</a></li> 
                         <li><a class="transition" href="contacts.htm">Contacts</a></li> -->
                 </ul>
+
+                <!-- logo -->
+                <div>
+                    <img alt="Pixellaa" class="logo" src="img/banner/pixellaa.png" />
+                    <div id="loader">
+                        <img alt="Loading.." src="img/ajax-loader.gif" />
+                    </div>
+                </div>
             </div>
             <div class="main_content">
                 <div id="top_content">
@@ -39,6 +47,32 @@ title: Pixella Perfume
                      <div class="main_img">
                         <a href="https://www.facebook.com/pixellaa" target="_blank"><img alt="Pixellaa home banner" src="img/banner/header.png" /></a>
                     </div> 
+                </div>
+
+                <!-- Our shop -->
+
+                <div id="best_work">
+                    <div class="best_work">
+                        <h3>Our shop</h3>
+                        <div>
+                            <a class="transition" href="menu.htm"><img alt="Best work" src="img/cover/menu.png" /></a>
+                            <a class="transition" href="menu.htm"><img alt="Best work" class="view" src="img/linz.png" /></a>
+                            <p>Menu</p>
+                        </div>
+
+                        <div>
+                            <a class="transition" href="special_collection.htm"><img alt="Best work" src="img/cover/special-collection.png" /></a>
+                            <a class="transition" href="special_collection.htm"><img alt="Best work" class="view" src="img/linz.png" /></a>
+                            <p>Special collection</p>
+                        </div>
+
+                        <div class="last_img">
+                            <a class="transition" href="tracking.htm"><img alt="Best work" src="img/cover/thailand-post.png" /></a>
+                            <a class="transition" href="tracking.htm"><img alt="Best work" class="view" src="img/linz.png" /></a>
+                            <p>Tracking number</p>
+                        </div>
+
+                    </div>
                 </div>
 
                 <!-- Info -->
@@ -62,7 +96,7 @@ title: Pixella Perfume
                     </div>
                 </div>
                 <div id="footer">
-                    &#169; Simple Tape 2012 All rights reserved.
+                    &#169; Pixellaa 2013 All rights reserved.
                     
                 <!--     <ul class="footer_navi">
                         <li class="current"><a class="transition" href="index.htm">Home</a></li>
