--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@ title: Pixella Perfume
                 <!-- top right navigator -->
                 <ul class="main_navi">
                         <li class="current"><a class="transition" href="index.htm">Home</a></li>
-                        <li><a class="transition" href="about.htm">Menu</a></li>
+                        <li><a class="transition" href="about.htm">Catalog</a></li>
                         <li><a class="transition" href="portfolio.htm">Reviews</a></li>
                         <!-- <li><a class="transition" href="blog.htm">Blog</a></li> 
                         <li><a class="transition" href="contacts.htm">Contacts</a></li> -->
@@ -55,9 +55,9 @@ title: Pixella Perfume
                     <div class="best_work">
                         <h3>Our shop</h3>
                         <div>
-                            <a class="transition" href="menu.htm"><img alt="Best work" src="img/cover/menu.png" /></a>
-                            <a class="transition" href="menu.htm"><img alt="Best work" class="view" src="img/linz.png" /></a>
-                            <p>Menu</p>
+                            <a class="transition" href="catalog.htm"><img alt="Best work" src="img/cover/menu.png" /></a>
+                            <a class="transition" href="catalog.htm"><img alt="Best work" class="view" src="img/linz.png" /></a>
+                            <p>Catalog</p>
                         </div>
 
                         <div>
